@@ -70,6 +70,7 @@ In alphabetical order (by last name)
 * Ian Dees
 ** Patch [#11917] Cleaner Spec::Ui error for failed Selenium connection
 * James Deville
+** Patch [#13451] Add a null_object option to mock_model
 ** Patch for [#13065] Named routes throw a NoMethodError in Helper specs
 * Steven Duncan
 ** Documentation for rake task
